# C-Chess-CLI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
gyok/: CMakeLists.txt
gyok/src/gyok/: gyok.c  gyok.h
program/: CMakeLists.txt  main.c
sakk/: CMakeLists.txt
sakk-exe/: CMakeLists.txt  asd.c
sakk/graphics/src/: graphics.c  graphics.h
sakk/logic/src/: logic.c  logic.h
sakk/logic/stack/src/: stack.c  stack.h
src/: CMakeLists.txt  main.c
src/chess/: CMakeLists.txt  chess.c  chess.h
src/chess/graphics/: graphics.c  graphics.h
src/chess/stack/: stack.h
src/tests/unit/: CMakeLists.txt  chess.spec.c  main.spec.c  stack.spec.c  stack.spec.h
testing/: CMakeLists.txt  test_sakk.c  utest-stack.c
testing/integrity/: Fischer-game-output.txt  Fischer-game.txt  castle-output.txt  castle.txt  promotion-output.txt  promotion.txt
testing/unit/: CMakeLists.txt  test_sakk.c  utest-logic.c  utest-logic.h  utest-stack.c  utest-stack.h
